[gd_scene load_steps=4 format=2]

[ext_resource path="res://subscenes/tournament/round_edit_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://subscenes/tournament/swiss_round_edit.gd" type="Script" id=2]
[ext_resource path="res://fonts/default_theme.tres" type="Theme" id=3]

[node name="SwissRoundEdit" instance=ExtResource( 1 )]
rect_pivot_offset = Vector2( -1076, -694 )
script = ExtResource( 2 )

[node name="PlayerCounter" parent="HBoxContainer" index="1"]
text = "4"
editable = true
placeholder_text = "4"

[node name="NeededWins" type="HBoxContainer" parent="." index="2"]
margin_top = 90.0
margin_right = 1920.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="NeededWins" index="0"]
margin_top = 5.0
margin_right = 1798.0
margin_bottom = 41.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Wins needed for a 1v1:"

[node name="WinInput" type="LineEdit" parent="NeededWins" index="1"]
margin_left = 1802.0
margin_right = 1920.0
margin_bottom = 46.0
theme = ExtResource( 3 )
text = "4"
max_length = 2
placeholder_text = "1"

[node name="MapPoolEditor" parent="." index="3"]
margin_top = 140.0
margin_bottom = 226.0

[connection signal="text_changed" from="HBoxContainer/PlayerCounter" to="." method="_on_PlayerCounter_text_changed"]
[connection signal="text_changed" from="NeededWins/WinInput" to="." method="_on_WinInput_text_changed"]
